# Stellar_Fundchain

./: README.md
contract/: Cargo.toml
contract/contracts/fundchain/src/: lib.rs  test.rs
contract/contracts/fundchain/test_snapshots/test/: test_campaign_count_increments.1.json  test_campaign_data_stored_correctly.1.json  test_campaign_ids_are_sequential.1.json  test_contribute_fails_after_deadline.1.json  test_contribute_fails_with_zero_amount.1.json  test_contribute_updates_raised.1.json  test_create_campaign_returns_id_zero.1.json  test_multiple_backers_accumulate.1.json  test_refund_after_failed_campaign.1.json  test_refund_fails_before_deadline.1.json  test_refund_fails_if_backer_never_contributed.1.json  test_refund_fails_if_goal_was_met.1.json  test_same_backer_contributes_twice.1.json  test_withdraw_fails_if_already_withdrawn.1.json  test_withdraw_fails_if_goal_not_met.1.json  test_withdraw_succeeds_when_goal_met.1.json
frontend/: .GITIGNORE  Readme.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/components/: App.js  index.js
frontend/src/contracts/: FundChain.json  Fundchain.json
frontend/src/styles/: main.css
frontend/src/utils/: cache.js  contractClient.js  store.js  walletConnector.js
tests/: fundchain.test.js
