[workspace]
resolver = "2"
members  = ["contracts/fundchain"]

[workspace.dependencies]
soroban-sdk = "23.4.1"

# ── MANDATORY: keeps WASM under the 64KB contract size limit ──────────────────
[profile.release]
opt-level        = "z"
overflow-checks  = true
debug            = 0
strip            = "symbols"
debug-assertions = false
panic            = "abort"
codegen-units    = 1
lto              = true